--- a/src/AspnetWebApi2Helpers/AspnetWebApi2Helpers.Serialization/AspnetWebApi2Helpers.Serialization.csproj
+++ b/src/AspnetWebApi2Helpers/AspnetWebApi2Helpers.Serialization/AspnetWebApi2Helpers.Serialization.csproj
@@ -24,6 +24,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\AspnetWebApi2Helpers.Serialization.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -32,6 +33,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\AspnetWebApi2Helpers.Serialization.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="..\..\Shared\CodeAnnotations.cs">
