--- a/test/AspnetWebApi2Helpers.Serialization.Protobuf.Tests/AspnetWebApi2Helpers.Serialization.Protobuf.Tests.csproj
+++ b/test/AspnetWebApi2Helpers.Serialization.Protobuf.Tests/AspnetWebApi2Helpers.Serialization.Protobuf.Tests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B76064E4-D4D1-4D4E-9782-59FAE9294F5E}</ProjectGuid>
+    <ProjectGuid>{D95E2999-DB42-430F-BC47-28280EB5BBC8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AspnetWebApi2Helpers.Serialization.Tests</RootNamespace>
-    <AssemblyName>AspnetWebApi2Helpers.Serialization.Tests</AssemblyName>
+    <RootNamespace>AspnetWebApi2Helpers.Serialization.Protobuf.Tests</RootNamespace>
+    <AssemblyName>AspnetWebApi2Helpers.Serialization.Protobuf.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,41 +30,46 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\src\AspnetWebApi2Helpers\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="protobuf-net">
+      <HintPath>..\..\src\AspnetWebApi2Helpers\packages\protobuf-net.2.0.0.480\lib\net40\protobuf-net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Net.Http.Formatting, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="System.Net.Http.Formatting">
       <HintPath>..\..\src\AspnetWebApi2Helpers\packages\Microsoft.AspNet.WebApi.Client.5.2.2\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WebApiContrib.Formatting.ProtoBuf">
+      <HintPath>..\..\src\AspnetWebApi2Helpers\packages\WebApiContrib.Formatting.ProtoBuf.0.9.5.0\lib\net40\WebApiContrib.Formatting.ProtoBuf.dll</HintPath>
+    </Reference>
     <Reference Include="xunit">
       <HintPath>..\..\src\AspnetWebApi2Helpers\packages\xunit.1.9.2\lib\net20\xunit.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="JsonMediaTypeFormatterExtensionsTests.cs" />
     <Compile Include="MediaTypeFormatterCollectionExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ProtoBufFormatterExtensionsTests.cs" />
     <Compile Include="TestHelper.cs" />
-    <Compile Include="XmlMediaTypeFormatterExtensionsTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\AspnetWebApi2Helpers\AspnetWebApi2Helpers.Serialization\AspnetWebApi2Helpers.Serialization.csproj">
-      <Project>{f2f2866b-a786-4ba9-8755-a3fb58f99cad}</Project>
-      <Name>AspnetWebApi2Helpers.Serialization</Name>
+    <ProjectReference Include="..\..\src\AspnetWebApi2Helpers\AspnetWebApi2Helpers.Serialization.Protobuf\AspnetWebApi2Helpers.Serialization.Protobuf.csproj">
+      <Project>{9416ffe0-e1ac-442e-ae73-ba2a4886accf}</Project>
+      <Name>AspnetWebApi2Helpers.Serialization.Protobuf</Name>
     </ProjectReference>
     <ProjectReference Include="..\AspnetWebApi2Helpers.Serialization.Tests.Common\AspnetWebApi2Helpers.Serialization.Tests.Common.csproj">
       <Project>{f0c60c37-5df7-4a7b-b527-c868e5abc297}</Project>
