--- a/test/AspnetWebApi2Helpers.Serialization.Tests.Common/AspnetWebApi2Helpers.Serialization.Tests.Common.csproj
+++ b/test/AspnetWebApi2Helpers.Serialization.Tests.Common/AspnetWebApi2Helpers.Serialization.Tests.Common.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B76064E4-D4D1-4D4E-9782-59FAE9294F5E}</ProjectGuid>
+    <ProjectGuid>{F0C60C37-5DF7-4A7B-B527-C868E5ABC297}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AspnetWebApi2Helpers.Serialization.Tests</RootNamespace>
-    <AssemblyName>AspnetWebApi2Helpers.Serialization.Tests</AssemblyName>
+    <RootNamespace>AspnetWebApi2Helpers.Serialization.Tests.Common</RootNamespace>
+    <AssemblyName>AspnetWebApi2Helpers.Serialization.Tests.Common</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,46 +30,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\src\AspnetWebApi2Helpers\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Net.Http.Formatting, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\src\AspnetWebApi2Helpers\packages\Microsoft.AspNet.WebApi.Client.5.2.2\lib\net45\System.Net.Http.Formatting.dll</HintPath>
-    </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="xunit">
-      <HintPath>..\..\src\AspnetWebApi2Helpers\packages\xunit.1.9.2\lib\net20\xunit.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="JsonMediaTypeFormatterExtensionsTests.cs" />
-    <Compile Include="MediaTypeFormatterCollectionExtensionsTests.cs" />
+    <Compile Include="Entities\Category.cs" />
+    <Compile Include="Entities\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestHelper.cs" />
-    <Compile Include="XmlMediaTypeFormatterExtensionsTests.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\src\AspnetWebApi2Helpers\AspnetWebApi2Helpers.Serialization\AspnetWebApi2Helpers.Serialization.csproj">
-      <Project>{f2f2866b-a786-4ba9-8755-a3fb58f99cad}</Project>
-      <Name>AspnetWebApi2Helpers.Serialization</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\AspnetWebApi2Helpers.Serialization.Tests.Common\AspnetWebApi2Helpers.Serialization.Tests.Common.csproj">
-      <Project>{f0c60c37-5df7-4a7b-b527-c868e5abc297}</Project>
-      <Name>AspnetWebApi2Helpers.Serialization.Tests.Common</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
