--- a/samples/AspnetWebApi2Helpers.Sample.Web/AspnetWebApi2Helpers.Sample.Web.csproj
+++ b/samples/AspnetWebApi2Helpers.Sample.Web/AspnetWebApi2Helpers.Sample.Web.csproj
@@ -46,10 +46,18 @@
     <Reference Include="AspnetWebApi2Helpers.Serialization">
       <HintPath>..\..\src\AspnetWebApi2Helpers\packages\AspnetWebApi2Helpers.Serialization.1.0.0-alpha1\lib\portable-net45+win+wpa81+wp80\AspnetWebApi2Helpers.Serialization.dll</HintPath>
     </Reference>
+    <Reference Include="AspnetWebApi2Helpers.Serialization.Protobuf">
+      <HintPath>..\..\src\AspnetWebApi2Helpers\packages\AspnetWebApi2Helpers.Serialization.Protobuf.1.0.0-alpha1\lib\net45\AspnetWebApi2Helpers.Serialization.Protobuf.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\src\AspnetWebApi2Helpers\packages\Newtonsoft.Json.6.0.7\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="protobuf-net">
+      <HintPath>..\..\src\AspnetWebApi2Helpers\packages\protobuf-net.2.0.0.480\lib\net40\protobuf-net.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -109,6 +117,10 @@
     <Reference Include="System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\..\src\AspnetWebApi2Helpers\packages\Microsoft.AspNet.WebPages.3.2.2\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
+    </Reference>
+    <Reference Include="WebApiContrib.Formatting.ProtoBuf">
+      <HintPath>..\..\src\AspnetWebApi2Helpers\packages\WebApiContrib.Formatting.ProtoBuf.0.9.5.0\lib\net40\WebApiContrib.Formatting.ProtoBuf.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="WebGrease">
       <HintPath>..\..\src\AspnetWebApi2Helpers\packages\WebGrease.1.6.0\lib\WebGrease.dll</HintPath>
