--- a/samples/AspnetWebApi2Helpers.Sample.Web/packages.config
+++ b/samples/AspnetWebApi2Helpers.Sample.Web/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="AspnetWebApi2Helpers.Serialization" version="1.0.0-alpha1" targetFramework="net45" />
+  <package id="AspnetWebApi2Helpers.Serialization.Protobuf" version="1.0.0-alpha1" targetFramework="net45" />
   <package id="bootstrap" version="3.3.1" targetFramework="net45" />
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.9.2" targetFramework="net45" />
@@ -18,7 +19,9 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.7" targetFramework="net45" />
+  <package id="protobuf-net" version="2.0.0.480" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
+  <package id="WebApiContrib.Formatting.ProtoBuf" version="0.9.5.0" targetFramework="net45" />
   <package id="WebApiTestOnHelpPage" version="1.3.4" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
