--- a/src/AspnetWebApi2Helpers/AspnetWebApi2Helpers.Serialization.Protobuf/AspnetWebApi2Helpers.Serialization.Protobuf.nuspec
+++ b/src/AspnetWebApi2Helpers/AspnetWebApi2Helpers.Serialization.Protobuf/AspnetWebApi2Helpers.Serialization.Protobuf.nuspec
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
     <metadata>
-        <id>AspnetWebApi2Helpers.Serialization.Protobuf</id>
+        <id>AspNetWebApi2Helpers.Serialization.Protobuf</id>
     	  <version>$PackageVersion$</version>
         <title>Asp.Net Web Api 2 Protobuf serialization helper</title>
         <authors>Tony Sneed</authors>
