--- a/samples/AspnetWebApi2Helpers.Sample.Client/packages.config
+++ b/samples/AspnetWebApi2Helpers.Sample.Client/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AspnetWebApi2Helpers.Serialization" version="1.0.0-alpha1" targetFramework="net45" />
-  <package id="AspnetWebApi2Helpers.Serialization.Protobuf" version="1.0.0-alpha1" targetFramework="net45" />
+  <package id="AspNetWebApi2Helpers.Serialization" version="1.0.0-alpha1-1" targetFramework="net45" />
+  <package id="AspNetWebApi2Helpers.Serialization.Protobuf" version="1.0.0-alpha1-1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="protobuf-net" version="2.0.0.480" targetFramework="net45" />
