--- a/samples/AspnetWebApi2Helpers.Sample.Web/packages.config
+++ b/samples/AspnetWebApi2Helpers.Sample.Web/packages.config
@@ -3,6 +3,8 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net451" />
   <package id="bootstrap" version="3.3.1" targetFramework="net451" />
   <package id="jQuery" version="2.1.3" targetFramework="net451" />
+  <package id="jQuery.UI.Combined" version="1.9.2" targetFramework="net451" />
+  <package id="knockoutjs" version="3.2.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net451" />
@@ -16,5 +18,6 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
   <package id="Respond" version="1.4.2" targetFramework="net451" />
+  <package id="WebApiTestOnHelpPage" version="1.3.4" targetFramework="net451" />
   <package id="WebGrease" version="1.6.0" targetFramework="net451" />
 </packages>
