--- a/samples/AspnetWebApi2Helpers.Sample.Client/packages.config
+++ b/samples/AspnetWebApi2Helpers.Sample.Client/packages.config
@@ -1,9 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AspNetWebApi2Helpers.Serialization" version="1.0.0-alpha1-1" targetFramework="net45" />
-  <package id="AspNetWebApi2Helpers.Serialization.Protobuf" version="1.0.0-alpha1-1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
-  <package id="protobuf-net" version="2.0.0.668" targetFramework="net45" />
-  <package id="WebApiContrib.Formatting.ProtoBuf" version="0.9.5.0" targetFramework="net45" />
 </packages>
