--- a/samples/AspnetWebApi2Helpers.Sample.Web/packages.config
+++ b/samples/AspnetWebApi2Helpers.Sample.Web/packages.config
@@ -14,6 +14,9 @@
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net451" />
+  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net451" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net451" />
+  <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Modernizr" version="2.8.3" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
