--- a/samples/AspnetWebApi2Helpers.Sample.Entities/AspnetWebApi2Helpers.Sample.Entities.csproj
+++ b/samples/AspnetWebApi2Helpers.Sample.Entities/AspnetWebApi2Helpers.Sample.Entities.csproj
@@ -43,7 +43,7 @@
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\packages\Newtonsoft.Json.6.0.8\lib\portable-net45+wp80+win8+wpa81+aspnetcore50\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
